aks/authentication/templates/authentication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication
  namespace: default
  labels:
    app: authentication
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: authentication
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: authentication
    spec:
      containers:
        - name: authentication
          image: vtchk8sblueprintrg.azurecr.io/microservice-kubernetes-cluster/authentication:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /auth/actuator/health/liveness
              port: 8090
            initialDelaySeconds: 20
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /auth/actuator/health/readiness
              port: 8090
            initialDelaySeconds: 15
            periodSeconds: 2
          volumeMounts:
            - name: application-config
              mountPath: "/etc/config/"
      volumes:
        - name: application-config
          configMap:
            name: authentication-config
            items:
              - key: application-prod.yml
                path: application-prod.yml
