aks/authentication/templates/authentication-service.yml
apiVersion: v1
kind: Service
metadata:
  name: authentication
  namespace: default
  labels:
    app: authentication
    service: authentication
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: '/actuator/prometheus'
    prometheus.io/port: '8080'
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8090
  selector:
    app: authentication
