aks/authentication/templates/authentication-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authentication
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - application-gateway
  http:
    - match:
        - uri:
            prefix: /oauth
      route:
        - destination:
            port:
              number: 8080
            host: authentication
